adguard/httproute-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-public
spec:
  parentRefs:
  - name: adguard
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - adguard.bennaylor.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /oauth2
    backendRefs:
    - group: ""
      kind: Service
      name: oauth2-proxy
      namespace: oauth2-proxy
      port: 80
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: adguard-admin
      port: 3000
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: oauth-chain
